# codi

./: .gitignore  .mcp.json  Cargo.toml  README.md  codi.toml
crates/codi-cli/: Cargo.toml
crates/codi-cli/src/: main.rs
crates/codi-core/: Cargo.toml
crates/codi-core/src/: config.rs  doctor.rs  engine.rs  improve.rs  init.rs  lib.rs  mcp.rs  ollama.rs  pending.rs  reliability.rs  review.rs  risk.rs  routing.rs  setup.rs  signals.rs  standards.rs
crates/codi-core/tests/: integration_engine.rs
crates/codi-mock-server/: Cargo.toml
crates/codi-mock-server/src/: lib.rs  main.rs
crates/codi-rag/: Cargo.toml
crates/codi-rag/src/: db.rs  embed.rs  index.rs  lib.rs  main.rs  search.rs
docs/superpowers/plans/: 2026-06-24-coding-standards-injection.md  2026-06-24-onboarding.md  2026-06-24-self-improvement.md  2026-06-25-claude-md-delegation.md  2026-06-25-reliability-layer.md
docs/superpowers/specs/: 2026-06-24-coding-standards-injection-design.md  2026-06-24-onboarding-design.md  2026-06-24-onboarding-fixlist.md  2026-06-24-self-improvement-design.md  2026-06-25-claude-md-delegation-design.md  2026-06-25-reliability-layer-design.md  2026-07-01-codi-local-orchestration-design.md
examples/: rust-feature.md  typescript-feature.md
