[package]
name = "codi-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codi_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
dirs.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile = "3"
