[package]
name = "codi-mock-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codi_mock_server"
path = "src/lib.rs"

[[bin]]
name = "codi-mock-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
