[package]
name = "codi-rag"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codi_rag"
path = "src/lib.rs"

[[bin]]
name = "codi-rag"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
ignore.workspace = true
globset.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3"
